# goman

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/api/: download_candidate.rs  list_candidates.rs  mod.rs
src/cmd/: install.rs  list.rs  uninstall.rs  use.rs
